Change app name in privacy policy
Updated the app name in the privacy policy from 'Pexeso' to 'Simple memory game'.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <p><strong>Last updated:</strong> July 25, 2025</p>
 
-  <p>This Privacy Policy describes how the mobile game <strong>Pexeso</strong> ("the App") handles user data and privacy.</p>
+  <p>This Privacy Policy describes how the mobile game <strong>Simple memory game</strong> ("the App") handles user data and privacy.</p>
 
   <h2>1. Data Collection</h2>
   <p>The App does <strong>not collect</strong> any personal data from users. It does not require any account registration or personal information input.</p>
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
