--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy – Pexeso</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      color: #333;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Privacy Policy - Simple Memory Game</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
+    <h1>Privacy Policy – Simple Memory Game</h1>
+    <p><strong>Effective Date:</strong> October 15, 2025</p>
 
-  <p><strong>Last updated:</strong> July 25, 2025</p>
+    <p><strong>Simple Memory Game</strong> ("we", "our", "the app") respects your privacy. This app is available worldwide, including the EU and the USA.</p>
 
-  <p>This Privacy Policy describes how the mobile game <strong>Simple memory game</strong> ("the App") handles user data and privacy.</p>
+    <h2>1. Data Collection</h2>
+    <ul>
+        <li><strong>Non-personal data:</strong> Our game <strong>does not collect any personal data</strong> such as name, email, age, or location.</li>
+        <li><strong>Advertisements:</strong> The app displays ads via <strong>Unity Ads</strong>, which may collect anonymous data for ad personalization purposes.</li>
+    </ul>
 
-  <h2>1. Data Collection</h2>
-  <p>The App does <strong>not collect</strong> any personal data from users. It does not require any account registration or personal information input.</p>
+    <h2>2. Cookies and Technologies</h2>
+    <p>Unity Ads may use cookies or similar technologies to serve targeted advertisements. We <strong>do not control</strong> data collected by third parties.</p>
 
-  <h2>2. Permissions</h2>
-  <p>The App does not request access to any sensitive device permissions such as camera, microphone, contacts, or location.</p>
+    <h2>3. User Rights</h2>
+    <ul>
+        <li>For EU users: You have the right to request information about data processing by third parties (e.g., Unity Ads).</li>
+        <li>For California users: You may exercise rights under the <strong>CCPA</strong>, such as requesting information about data collected by third parties.</li>
+    </ul>
 
-  <h2>3. Third-Party Services</h2>
-  <p>The App does not use any third-party services, analytics tools, or ad networks. No user data is shared or transmitted to external parties.</p>
+    <h2>4. Changes to This Privacy Policy</h2>
+    <p>This Privacy Policy may be updated from time to time. Updates will be posted on this page.</p>
 
-  <h2>4. Changes to This Policy</h2>
-  <p>This Privacy Policy may be updated from time to time. If changes are made, they will be reflected on this page with the updated date above.</p>
-
-  <h2>5. Contact</h2>
-  <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at: <strong>shandorfitjantopi01@gmail.com</strong></p>
-
+    <h2>5. Contact</h2>
+    <p>If you have any privacy-related questions, please contact us at: <a href="mailto:shandorfitjantopi01@gmail.com">shandorfitjantopi01@gmail.com</a></p>
 </body>
 </html>
+
 
